# pokebattleRL

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  tasks.py
bot/: Dockerfile  README.md  pyproject.toml
bot/src/: main.py  tournament.py
bot/src/agent/: MoveAgent.py  TeamAgent.py  __init__.py
bot/src/agent/teams/meta/: 1.txt  3.txt  4.txt
bot/src/state/: action.py
docker/: Dockerfile
pokebattlerl/: env.py
pokebattlerl/agent/: Random.py  loggingAgent.py  maxDamage.py
pokebattlerl/scoring/: tournament.py
pokebattlerl/state/: state.py
server/: Dockerfile  config.js
tests/tf/: test_battles.py
